--- a/Droid/Properties/AndroidManifest.xml
+++ b/Droid/Properties/AndroidManifest.xml
@@ -1,7 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.demo.mobile">
 	<uses-sdk android:minSdkVersion="19" android:targetSdkVersion="21" />
-	<application android:label="Beehive Mobile" android:icon="@drawable/icon">
+	<application android:icon="@drawable/icon" android:label="Demo Mobile">
 		<meta-data android:name="com.google.android.maps.v2.API_KEY" android:value="YOUR_KEY_HERE!!!" />
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
